<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".EncourageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:tint="@color/white" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encourage"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="@drawable/tool_bar_shadow"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_wx_pay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FF11C802"
        app:layout_constraintBottom_toTopOf="@+id/cl_ali_pay"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar">

        <ImageView
            android:id="@+id/iv_wx_qrcode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_wx_qrcode"
            app:layout_constraintBottom_toTopOf="@+id/tv_wx_desc"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_wx_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:gravity="center"
            android:text="@string/wx_encourage_tip"
            android:textColor="@color/background"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/btn_wx_encourage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_wx_qrcode" />

        <Button
            android:id="@+id/btn_wx_encourage"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/encourage"
            android:textColor="#FF11C802"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_wx_qrcode"
            app:layout_constraintStart_toStartOf="@+id/iv_wx_qrcode"
            app:layout_constraintTop_toBottomOf="@+id/tv_wx_desc"
            tools:backgroundTint="@color/background" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_ali_pay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FF108EE9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_wx_pay">

        <ImageView
            android:id="@+id/iv_ali_qrcode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_ali_qrcode"
            app:layout_constraintBottom_toTopOf="@+id/tv_ali_desc"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/tv_ali_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:gravity="center"
            android:text="@string/ali_encourage_tip"
            android:textColor="@color/background"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@+id/btn_ali_encourage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_ali_qrcode" />

        <Button
            android:id="@+id/btn_ali_encourage"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/encourage"
            android:textColor="#FF108EE9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_ali_qrcode"
            app:layout_constraintStart_toStartOf="@+id/iv_ali_qrcode"
            app:layout_constraintTop_toBottomOf="@+id/tv_ali_desc"
            tools:backgroundTint="@color/background" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>